SWU-634 - Fixed some broken icons and spacing
- Moved the header icons JS into the global file
- Fixed the icon spacing and alignment on all buttons
- Fixed a card style that was incorrectly applying to child elements of body children
- Removed the left padding from the styleguide navigation links

--- a/swinburne-aem-prototype/source/styleguide/scss/styleguide.scss
+++ b/swinburne-aem-prototype/source/styleguide/scss/styleguide.scss
@@ -64,6 +64,8 @@ html:not(.aem-AuthorLayer-Edit) {
           margin-bottom: 15px;
 
           > li {
+            padding-left: 0;
+
             &:not(:last-child) {
               margin-bottom: 2px;
             }
