--- a/swinburne-aem-prototype/source/sut/scss/override/_button.scss
+++ b/swinburne-aem-prototype/source/sut/scss/override/_button.scss
@@ -85,13 +85,22 @@ $button-colours: (
     }
   }
 
-  > span {
+  > span,
+  > .svg-inline--fa {
     transition: transform .15s ease-in-out;
   }
 
+  > .svg-inline--fa {
+    font-size: 18px;
+    margin-left: auto;
+  }
+
   @include hover {
-    &:not(.btn-link):not(:active) > span {
-      transform: translateY(-2px);
+    &:not(.btn-link):not(:active) {
+      > span,
+      > .svg-inline--fa {
+        transform: translateY(-2px);
+      }
     }
   }
 
@@ -110,7 +119,7 @@ $button-colours: (
     min-width: unset;
     padding: 0;
 
-    > span::after {
+    > .svg-inline--fa {
       margin-left: 30px;
     }
 
