--- a/swinburne-aem-prototype/source/sut/scss/override/_card.scss
+++ b/swinburne-aem-prototype/source/sut/scss/override/_card.scss
@@ -79,7 +79,7 @@
 
     // A small 'hack' (if you will) that ensures buttons remain aligned to the bottom of the
     // card as sibling cards will be the same height as oneanother.
-    :last-child:not(.card-title):not(.card-text) {
+    > :last-child:not(.card-title):not(.card-text) {
       margin-top: auto;
     }
 
@@ -116,6 +116,8 @@
 
   &-link {
     @extend .link;
+
+    height: auto;
   }
 
   // Variations and style changes
